# audio-summary

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  meeting-minutes_52084831-76b9-47ef-aa34-b224cff46bae@test-audio-0601.wav_20240603-181826_20240615-233044.md  pyproject.toml  startaudiosummary
audio_summary/: __main__.py  __version__.py  api_utils.py  app.py  exceptions.py  offline_app.py
audio_summary/prompts/: __init__.py  examples.py  lang.py  meeting_minutes.py  response_template.py
audio_summary/purger/: README.md  __init__.py  cli.py  purger.py
audio_summary/server/: __main__.py  html.py  run.py
scripts/: docker-entrypoint.sh
tests/: test_app.py
