[tool.poetry]
name = "audio-summary"
version = "0.1.5"
description = ""
authors = ["thisishugow <59921505+thisishugow@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "audio_summary"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.23.1"
python-dotenv = "^1.0.1"
transformers = "^4.40.0"
datasets = "^2.18.0"
accelerate = "^0.29.3"
librosa = "^0.10.1"
tqdm = "^4.66.2"
google-generativeai = "^0.5.4"
streamlit = "^1.35.0"
pypandoc-binary = "^1.15"
pypandoc = "^1.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
