[tool.poetry]
name = "audio-summary"
version = "0.1.7"
description = ""
authors = ["thisishugow <59921505+thisishugow@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "audio_summary"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.23.1"
python-dotenv = "^1.0.1"
librosa = "^0.10.1"
tqdm = "^4.66.2"
google-generativeai = "^0.5.4"
streamlit = "^1.35.0"
pypandoc-binary = "^1.15"
pypandoc = "^1.15"
schedule = "^1.2.2"
schedule = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
audio_summary = "audio_summary.server:main"
audio_summary_purger = "audio_summary.purger.cli:main"

[tool.poetry.scripts]
audio_summary = "audio_summary.server:main"
audio_summary_purger = "audio_summary.purger.cli:main"
